# interferometry

./: .gitignore  :w  LICENSE  README.md  endcode.m  foo.py  pyproject.toml  requirements.txt  temp.py
src/: auxlib.py  main.py  naive.py  phaselib.py  pipeline.py  single.py  test.py
src/lib/: aux.py  opd.py  phase.py  plot.py  unwrap.py
test/: compare.py  cpu.py  gpu.py
test/lib/: plot.py
