[tool.poetry]
name = "off-axis-interferometry"
version = "0.1.0"
description = ""
authors = ["ayibogucu <ismail.inal999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.3"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
